--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,20 +1,23 @@
 <!doctype html>
 <html>
     <head>
-        <style>
-         canvas {
-             margin-top: 20px;
-         }
-         body {
-             max-width: 778px;
-         }
-        </style>
-        <script src="http://fb.me/react-0.13.1.min.js"></script>
-        <script type="text/javascript" src="/node_modules/chart.js/Chart.min.js"></script>
-        <script src="/js/bundle.js"></script>
+        <meta />
+        <meta content='text/html; charset=utf-8' http-equiv='content-type'>
+        <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1' name='viewport'>
+        <title>Ginatra</title>
+        <link href="/css/main.css" rel="stylesheet"/>
+        <script src="/js/vendors/react.min.js"></script>
+        <script src="/js/vendors/JSXTransformer.js"></script>
+        <script src="/js/vendors/Chart.js" type="text/javascript"></script>
+        <script src="/js/bundle.js"" type="text/jsx"></script>
     </head>
 
     <body>
-        <div id="examples"></div>
+        <%= erb :_header %>
+
+        <div id="dashboard"></div>
+
+        <%= erb :_footer %>
+
     </body>
 </html>
