--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,10 +6,7 @@
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1' name='viewport'>
         <title>Ginatra</title>
         <link href="/css/main.css" rel="stylesheet"/>
-        <script src="/js/vendors/react.min.js"></script>
-        <script src="/js/vendors/JSXTransformer.js"></script>
-        <script src="/js/vendors/Chart.js" type="text/javascript"></script>
-        <script src="/js/bundle.js"" type="text/jsx"></script>
+        <script src="/js/bundle.js" type="text/javascript"></script>
     </head>
 
     <body>
