--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,8 @@
     </head>
 
     <body>
-        <%= erb :_header %>
-
-        <div id="dashboard"></div>
-
-        <%= erb :_footer %>
+        <%= erb :header %>
+        <%= erb :footer %>
 
     </body>
 </html>
