--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,10 @@
 
     <body>
         <%= erb :header %>
+        <div class="row full">
+            <!-- today commits overview -->
+            <div id="today-overview"></div>
+        </div>
         <%= erb :footer %>
 
     </body>
