commits overview component

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
     <body>
         <%= erb :header %>
         <div class="row full">
+            <div id="dashboard"></div>
             <!-- today commits overview -->
             <div id="today-overview"></div>
         </div>
