barebone overview dashboard

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,9 @@
                 <div id="sprint-overview"></div>
             </div>
         </div>
+        <div class="row full">
+            <div id="repo-info"></div>
+        </div>
         <%= erb :footer %>
 
     </body>
