--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,2 +1,91 @@
+//@import url(http://fonts.googleapis.com/css?family=Quicksand:400,700);
+@import url('http://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700&subset=latin,latin-ext');
+
+$color_bg: #000;
+$color_text: #fff;
+$color_text_label: #b1b1b1;
+
+$ff_main: 'Roboto Mono', 'Helvetica', 'Arial';
+$fw_main: 300;
+$fs_main: 11px;
+
 body {
+    background: $color_bg;
+    color: $color_text;
+    font-family: $ff_main;
+    font-weight: $fw_main;
+    margin: 0px;
+    padding: 0px;
+    font-size: $fs_main;
+    line-height: 1;
+}
+
+div, ul, ol, li, p {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+table {
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    border-bottom: 1px solid rgba(255,255,255,0.4);
+    padding: 5px;
+}
+
+.full, .row {
+    width: 100%;
+    clear: both;
+}
+
+.half {
+    width: 48%;
+}
+
+.third {
+    width: 31.333%;
+}
+
+.fourth {
+    width: 23%;
+}
+
+.half, .third, .fourth {
+    margin: 5px 1%;
+}
+
+.center {
+    text-align: center;
+}
+
+.big-margin {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.full, .row, .half, .third, .fourth {
+    float: left;
+}
+
+.label {
+    color: $color_text_label;
+}
+
+#today-overview {
+    font-size: 4em;
+    .commits-overview {
+        > div {
+            width: 48%;
+            float: left;
+        }
+    }
+    .big {
+        font-size: 2em;
+        font-weight: bold;
+    }
 }
