--- a/views/header.erb
+++ b/views/header.erb
@@ -1,3 +1,3 @@
 <header class="full row">
-    <h1 class="half">EXOVE::TEAM_MEKONG.turkish_delight</h1>
+    <h1 class="half"><%= title %></h1>
 </header>
