--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
         <meta />
         <meta content='text/html; charset=utf-8' http-equiv='content-type'>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1' name='viewport'>
-        <title>Ginatra</title>
+        <title>Ginatra - <%= title %></title>
         <link href="/css/main.css" rel="stylesheet"/>
         <script src="/js/bundle.js" type="text/javascript"></script>
     </head>
