--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,57 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta />
-        <meta content='text/html; charset=utf-8' http-equiv='content-type'>
-        <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1' name='viewport'>
-        <title><%= title %></title>
-        <link href="/css/main.css" rel="stylesheet"/>
-        <script src="/js/bundle.js" type="text/javascript"></script>
-    </head>
+  <head>
+    <meta />
+    <meta content='text/html; charset=utf-8' http-equiv='content-type'>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1' name='viewport'>
+    <title><%= title %></title>
+    <link href="/css/main.css" rel="stylesheet"/>
+    <script src="/js/bundle.js" type="text/javascript"></script>
+  </head>
 
-    <body>
-        <%= erb :header %>
-        <div class="half">
-
-
-            <!-- TODAY COMMITS -->
-            <div class="full">
-                <% today = Time.new %>
-                <h1 class="label"><%= "#{today.day}-#{today.month}-#{today.year}" %></h1>
-                <div id="today-overview"></div>
-            </div>
-            <!-- /TODAY COMMITS -->
-
-
-            <!-- TODAY ACTIVITY -->
-            <div class="half big-margin">
-                <h2 class="label center">Today's Commit Activity</h2>
-                <div id="today-activity"></div>
-            </div>
-            <!-- /TODAY ACTIVITY -->
-
-
-            <!-- PROJECT SIZE COMPARISON -->
-            <div class="half big-margin">
-                <h2 class="label center">Project Sizes</h2>
-                <div id="project-size-comparison"></div>
-            </div>
-            <!-- /PROJECT SIZE COMPARISON -->
-
-
-            <!-- SPRINT OVERVIEW -->
-            <div class="full big-margin">
-                <h2 class="label">Sprint Overview</h2>
-                <div id="sprint-overview"></div>
-            </div>
-            <!-- /SPRINT OVERVIEW -->
-
-
-        </div>
-        <div class="half">
-            <div id="repo-info"></div>
-        </div>
-        <%= erb :footer %>
-
-    </body>
+  <body>
+    <%= partial :header, :locals => {:title => title} %>
+    <%= partial :main_content %>
+    <%= partial :footer%>
+  </body>
 </html>
