--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,11 +1,11 @@
 //@import url(http://fonts.googleapis.com/css?family=Quicksand:400,700);
-@import url('http://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700&subset=latin,latin-ext');
+//@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700&subset=latin,latin-ext');
 
 $color_bg: #000;
 $color_text: #fff;
 $color_text_label: #b1b1b1;
 
-$ff_main: 'Roboto Mono', 'Helvetica', 'Arial';
+$ff_main: 'Orbitron', 'Helvetica', 'Arial';
 $fw_main: 300;
 $fs_main: 11px;
 
@@ -17,7 +17,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-size: $fs_main;
-    line-height: 1;
+    line-height: 1.5;
 }
 
 div, ul, ol, li, p {
