--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <%= partial :header, :locals => {:title => title} %>
-    <%= partial :main_content %>
+    <%= partial :header %>
+    <%= partial :main_content, :locals => {:title => title} %>
     <%= partial :footer%>
   </body>
 </html>
