--- a/views/_main_content.erb
+++ b/views/_main_content.erb
@@ -5,7 +5,7 @@
 
       <!-- TODAY COMMITS -->
       <div class="full">
-        <h1 class="label"><%= title %> . <%= "#{today.day}-#{today.month}-#{today.year}" %></h1>
+        <h1 class="label"><%= "#{today.day}-#{today.month}-#{today.year}" %></h1>
         <div id="today-overview"></div>
       </div>
       <!-- /TODAY COMMITS -->
@@ -24,7 +24,7 @@
       <div class="half">
         <!-- SPRINT PROJECT COMMITS COMPARISON -->
         <div class="full">
-          <h2 class="label">Sprint commits</h2>
+          <h2 class="label center">Sprint commits</h2>
           <div id="sprint-projects-commits"></div>
         </div>
         <!-- /SPRINT PROJECT COMMITS COMPARISON -->
@@ -33,7 +33,7 @@
       <div class="half">
         <!-- SPRINT PROJECT HOURS COMPARISON -->
         <div class="full">
-          <h2 class="label">Sprint hours</h2>
+          <h2 class="label center">Sprint est. hours</h2>
           <div id="sprint-projects-hours"></div>
         </div>
         <!-- /SPRINT PROJECT HOURS COMPARISON -->
