--- a/views/_main_content.erb
+++ b/views/_main_content.erb
@@ -20,7 +20,7 @@
       <!-- /HOURLY ACTIVITY -->
     </div>
 
-    <div class="third">
+    <div class="fourth">
       <div class="half">
         <!-- SPRINT PROJECT COMMITS COMPARISON -->
         <div class="full">
