--- a/views/_main_content.erb
+++ b/views/_main_content.erb
@@ -5,7 +5,7 @@
 
       <!-- TODAY COMMITS -->
       <div class="full">
-        <h1 class="label"><%= "#{today.day}-#{today.month}-#{today.year}" %></h1>
+        <h1 class="label"><%= title %> . <%= "#{today.day}-#{today.month}-#{today.year}" %></h1>
         <div id="today-overview"></div>
       </div>
       <!-- /TODAY COMMITS -->
