dashboard components and routes

--- a/assets/js/src/components/RepoSelector/RepoButton.css
+++ b/assets/js/src/components/RepoSelector/RepoButton.css
@@ -1,8 +1,10 @@
 .repo-button {
   box-sizing: border-box;
+  cursor: pointer;
+  display: block;
   height: 100px;
+  line-height: 90px;
   margin-bottom: 20px;
   text-align: center;
-  line-height: 90px;
-  display: block;
+  transition: background-color 0.1s ease-out;
 }
