hourly commits and contributors count

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron:400,500,700');
 
 :root {
-  --textColor: #b1b1b1;
+  --textColor: #fff;
   --backgroundColor: #000;
   --highlightColor: #fff;
 
