repo selector to home page

--- a/assets/js/src/components/RepoSelector/RepoButton.css
+++ b/assets/js/src/components/RepoSelector/RepoButton.css
@@ -2,9 +2,10 @@
   box-sizing: border-box;
   cursor: pointer;
   display: block;
-  height: 100px;
-  line-height: 90px;
+  height: 55px;
+  line-height: 48px;
   margin-bottom: 20px;
   text-align: center;
   transition: background-color 0.1s ease-out;
+  font-weight: bold;
 }
