--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta />
     <meta content='text/html; charset=utf-8' http-equiv='content-type'>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1' name='viewport'>
     <title><%= title %></title>
-    <link href='http://fonts.googleapis.com/css?family=Orbitron:400,500,700,900' rel='stylesheet' type='text/css'>
-    <link href="/css/main.css" rel="stylesheet"/>
-    <script src="/js/bundle.js" type="text/javascript"></script>
   </head>
 
   <body>
-    <%= partial :header %>
-    <%= partial :main_content, :locals => {:title => title} %>
-    <%= partial :footer%>
+    <div id="wrapper"></div>
+    <script src="/js/dist/common.js" type="text/javascript"></script>
+    <script src="/js/dist/main.js" type="text/javascript"></script>
   </body>
 </html>
